--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "sample-clothing-backend-aws",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "serverless-http": "^4.0.0"
   }
 }
