--- a/serverless.yml
+++ b/serverless.yml
@@ -15,3 +15,10 @@ functions:
     handler: handler.handler
     events:
       - httpApi: "*"
+    environment: PORT:3030
+      ORIGIN:http://localhost:5173
+      MONGODB_URI:mongodb+srv://samanseedr2:ntHXai9P3xDFIItF@jvlsk.xxz4bku.mongodb.net/kellyFelder?appName=Jvlsk
+      AWS_ACCESS_KEY_ID:AKIAR5VCZ5UAVEPAVM4O
+      AWS_SECRET_ACCESS_KEY:vvfmj2PsS/n8JwDGnsGu9rbIsIIpx2juerJZ7xnl
+      AWS_REGION:eu-north-1
+      AWS_S3_BUCKET_NAME:sample-clothing-images
