--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,17 @@ service: sample-clothing-backend-aws
 provider:
   name: aws
   runtime: nodejs20.x
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - s3:PutObject
+            - s3:GetObject
+            - s3:ListBucket
+          Resource:
+            - arn:aws:s3:::sample-clothing-images
+            - arn:aws:s3:::sample-clothing-images/*
   # Uncomment to easily set up a custom domain. Read the docs for more details:
   # https://www.serverless.com/framework/docs/providers/aws/guide/domains
   # domain: api.example.com
@@ -18,7 +29,5 @@ functions:
     environment: PORT:3030
       ORIGIN:http://localhost:5173
       MONGODB_URI:mongodb+srv://samanseedr2:ntHXai9P3xDFIItF@jvlsk.xxz4bku.mongodb.net/kellyFelder?appName=Jvlsk
-      AWS_ACCESS_KEY_ID:AKIAR5VCZ5UAVEPAVM4O
-      AWS_SECRET_ACCESS_KEY:vvfmj2PsS/n8JwDGnsGu9rbIsIIpx2juerJZ7xnl
       AWS_REGION:eu-north-1
       AWS_S3_BUCKET_NAME:sample-clothing-images
